examples/test/testpolicy16036.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16036
  namespace: namespace399
spec:
  podSelector:
    matchLabels:
      key0: value28
      key2: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value23
          key30: value14
      podSelector:
        matchLabels:
          key20: value5
